...
                android:id="@+id/dialogProfileNameText"
            />
        </TableRow>

        <!-- Organization -->
        <TableRow
            android:id="@+id/dialogOrganizationTableRow"
            android:visibility="gone" >

            <TextView
                android:text="@string/h_ad_label_organization"
                style="@style/home.dialog.table.label"
            />
            <TextView
                android:id="@+id/dialogOrganizationText"
            />
        </TableRow>

        <!-- Username -->
        <TableRow>
            <TextView
                android:text="@string/h_ad_label_username"
                style="@style/home.dialog.table.label"
            />
            <TextView
                android:id="@+id/dialogUsernameText"
            />
        </TableRow>

    </TableLayout>

    <!-- Password -->
    <TextView
        style="@style/label"
        android:text="@string/sp_password_label"
    />
    <EditText
        android:id="@+id/dialogPasswordEdit"
        android:hint="@string/sp_password_hint"
        style="@style/home.dialog.passwordEdit"
    />

</LinearLayout>
